05-Networking-Services/port-forward_deploy-simpleservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleservice-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleservice
  template:
    metadata:
      labels:
        app: simpleservice
    spec:
      containers:
      - name: simpleservice-container
        image: repocurso/simpleservice:0.5.0
        ports:
        - containerPort: 9876
