05-Networking-Services/port-forward_service-simpleservice.yml
apiVersion: v1
kind: Service
metadata:
  name: simpleservice-demo
spec:
  selector:
    app: simpleservice
  ports:
    - port: 80
      targetPort: 9876
