05-Networking-Services/network-policy_apiserver-allow-port.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apiserver-allow-port
spec:
  podSelector:
    matchLabels:
      app: apiserver
  ingress:
  - ports:
    - port: 5000
    from:
    - podSelector:
        matchLabels:
          role: monitoring
