05-Networking-Services/network-policy_nginx-allow-ns-prod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-ns-prod
spec:
  podSelector:
    matchLabels:
      app: nginx-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: production
