05-Networking-Services/network-policy_nginx-allow-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-pod
spec:
  podSelector:
    matchLabels:
      app: nginx-api
      role: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: nginx-api
