05-Networking-Services/network-policy_nginx-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-deny-all
spec:
  podSelector:
    matchLabels:
      app: nginx-api
  ingress: []
